corrected the pom.xml file